<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_input_login_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        android:text="@string/scan"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.07"/>

    <ImageButton
        android:id="@+id/btn_input_login_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/icon_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="10dp"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constraintBottom_toBottomOf="@+id/tv_input_login_title"/>

    <TextView
        android:id="@+id/tv_user_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/userInfoText"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/tv_user_info_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_info_name"
        style="@style/userInfoValue"
        app:layout_constraintVertical_bias="0.15"/>

    <TextView
        android:id="@+id/tv_user_info_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_info_name_value"
        android:text="@string/idcard_name"
        style="@style/userInfoText"
        app:layout_constraintVertical_bias="0.3"
        />

    <TextView
        android:id="@+id/tv_user_info_card_name_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_user_info_idcard"
        style="@style/userInfoValue"
        app:layout_constraintVertical_bias="0.35"
        />

    <TextView
        android:id="@+id/tv_user_info_idcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_info_name_value"
        android:text="@string/idcard"
        style="@style/userInfoText"
        app:layout_constraintVertical_bias="0.5"
        />

    <TextView
        android:id="@+id/tv_user_info_idcard_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_user_info_idcard"
        style="@style/userInfoValue"
        android:text="1234"
        app:layout_constraintVertical_bias="0.55"
        />


    <TextView
        android:id="@+id/tv_bind"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:text="@string/bind"
        android:textColor="@color/bg_white"
        android:background="@color/bg_color"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
